syntax = "proto3";

package pb;

message WasmCodeDesc {
  string runtime = 1;
  string compiler = 2;
  bytes digest = 3;
  string vm_compiler = 4;
  string contract_type = 5;
}

message ContractEvent {
    string contract = 1;
    string name = 2;
    bytes body = 3;
}